--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -30,7 +30,7 @@
     <!-- Button -->
     <div class="ml-3 mb-3">
       <p class="mb-2 normal-case text-xs">By using this form you agree with the storage and handling of your data by this website.</p>
-      <button type="submit" class="transform hover:scale-90 transition duration-100 text-center py-3 px-10 text-4xl bg-primary shadow-lg rounded-full my-2">Send Message</button>
+      <button type="submit" class="text-white uppercase transform hover:scale-95 transition duration-100 text-center py-3 px-10 text-4xl bg-primary shadow-lg rounded-full my-2">Send Message</button>
     </div>
   </form>
 
