--- a/site/layouts/work/single.html
+++ b/site/layouts/work/single.html
@@ -71,6 +71,18 @@
       </div>
     </div>
 
+    {{ with .Params.pdf }}
+      <div class="flex mx-auto">
+        <a href="{{ . }}" class="mb-20 mx-auto">
+          <button class="text-white transform hover:scale-95 transition duration-100 text-center py-2 px-5 bg-primary shadow-lg rounded-full flex items-center">
+            <svg class="mr-2" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+            <span>DIGEST OUR CASE STUDY</span>
+          </button>
+        </a>
+      </div>
+    {{ end }}
+
+
   </div>
 
   <div class="flex flex-wrap max-w-5xl mx-auto py-10">
