added meta descriptions to all pages and removed previews for settings pages

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -3,7 +3,7 @@
 <div class="animate__animated animate__fadeIn test px-2">
   <div class="max-w-5xl mx-auto pt-20 pb-10">
     <p class="max-w-none font-semibold">{{ .Title }}</p>
-    <p class="max-w-none text-4xl normal-case">{{ .Description }}</p>
+    <p class="max-w-none text-4xl normal-case">{{ .Params.intro }}</p>
   </div>
 
   <div class="about-grid py-2 grid grid-cols-8 grid-rows-9 auto-rows-max gap-2">
