--- a/site/layouts/work/single.html
+++ b/site/layouts/work/single.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="max-w-5xl mx-auto py-10 text-2xl lg:text-4xl normal-case p-5">
-      {{.Description}}
+      {{.Params.intro}}
     </div>
 
     {{ if .Params.video }}
