fixing images on about preview

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -6,12 +6,10 @@
     <p class="max-w-none text-4xl normal-case">{{ .Params.intro }}</p>
   </div>
 
-  <div class="about-grid py-2 grid grid-cols-8 grid-rows-9 auto-rows-max gap-2">
-    <div class="bg-red-200 col-span-3 col-start-1 row-span-8" style="background:url({{ (index .Params.imageRow1 0).image }}); background-size:cover; background-position: center;"></div>
-    <div class="bg-red-200 col-span-2 col-start-4 row-span-3 row-start-2" style="background:url({{ (index .Params.imageRow1 1).image }}); background-size:cover; background-position: center;"></div>
-    <div class="bg-red-200 col-span-2 col-start-4 row-span-6" style="background:url({{ (index .Params.imageRow1 2).image }}); background-size:cover; background-position: center;"></div>
-    <div class="bg-red-200 col-span-1 col-start-6 row-span-6 row-start-3" style="background:url({{ (index .Params.imageRow1 3).image }}); background-size:cover; background-position: center;"></div>
-    <div class="bg-red-200 col-span-2 col-start-7 row-span-6 row-start-1" style="background:url({{ (index .Params.imageRow1 4).image }}); background-size:cover; background-position: center;"></div>
+  <div class="about-grid about-grid-1 py-2 grid grid-cols-8 grid-rows-9 auto-rows-max gap-2">
+    {{ range .Params.imageRow1 }}
+      <div class="bg-red-200 bg-cover bg-center" style="background-image:url({{ .image }});"></div>
+    {{ end }}
   </div>
 
   <div class="max-w-5xl mx-auto flex flex-wrap pt-20">
@@ -74,11 +72,10 @@
     </div>
   </div>
 
-  <div class="about-grid grid grid-cols-9 grid-rows-9 auto-rows-max gap-2">
-    <div class="bg-red-200 col-span-3 col-start-1 row-span-6 row-start-2" style="background:url({{ (index .Params.imageRow2 0).image }}); background-size:cover; background-position: center;"></div>
-    <div class="bg-red-200 col-span-3 col-start-4 row-span-8 row-start-1" style="background:url({{ (index .Params.imageRow2 1).image }}); background-size:cover; background-position: center;"></div>
-    <div class="bg-red-200 col-span-3 col-start-7 row-span-3 row-start-3" style="background:url({{ (index .Params.imageRow2 2).image }}); background-size:cover; background-position: center;"></div>
-    <div class="bg-red-200 col-span-3 col-start-7 row-span-4 row-start-6" style="background:url({{ (index .Params.imageRow2 3).image }}); background-size:cover; background-position: center;"></div>
+  <div class="about-grid about-grid-2 grid grid-cols-9 grid-rows-9 auto-rows-max gap-2">
+    {{ range .Params.imageRow2 }}
+      <div class="bg-red-200 bg-cover bg-center" style="background-image:url({{ .image }});"></div>
+    {{ end }}
   </div>
 
   <div class="max-w-5xl mx-auto flex flex-wrap py-20">
@@ -95,11 +92,10 @@
     </div>
   </div>
 
-  <div class="about-grid grid grid-cols-3 grid-rows-9 auto-rows-max gap-2 pb-20">
-    <div class="bg-red-200 col-start-1 row-span-4 row-start-2" style="background:url({{ (index .Params.imageRow3 0).image }}); background-size:cover; background-position: center;"></div>
-    <div class="bg-red-200 col-start-1 row-span-3 row-start-6 " style="background:url({{ (index .Params.imageRow3 1).image }}); background-size:cover; background-position: center;"></div>
-    <div class="bg-red-200 col-start-2 row-span-9" style="background:url({{ (index .Params.imageRow3 2).image }}); background-size:cover; background-position: center;"></div>
-    <div class="bg-red-200 col-start-3 row-span-6 row-start-3" style="background:url({{ (index .Params.imageRow3 3).image }}); background-size:cover; background-position: center;"></div>
+  <div class="about-grid about-grid-3 grid grid-cols-3 grid-rows-9 auto-rows-max gap-2 pb-20">
+    {{ range .Params.imageRow3 }}
+      <div class="bg-red-200 bg-cover bg-center" style="background-image:url({{ .image }});"></div>
+    {{ end }}
   </div>
 
   <div class="max-w-5xl mx-auto mb-10">
