--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -107,6 +107,54 @@ p {
   @media (min-width: 1536px) {
     grid-auto-rows: 80px;
   }
+
+  &-1 div {
+    &:nth-child(10n + 1) {
+      @apply col-span-3 col-start-1 row-span-8;
+    }
+    &:nth-child(10n + 2) {
+      @apply col-span-2 col-start-4 row-span-3 row-start-2;
+    }
+    &:nth-child(10n + 3) {
+      @apply col-span-2 col-start-4 row-span-6;
+    }
+    &:nth-child(10n + 4) {
+      @apply col-span-1 col-start-6 row-span-6 row-start-3;
+    }
+    &:nth-child(10n + 5) {
+      @apply col-span-2 col-start-7 row-span-6 row-start-1;
+    }
+  }
+
+  &-2 div {
+    &:nth-child(10n + 1) {
+      @apply col-span-3 col-start-1 row-span-6 row-start-2;
+    }
+    &:nth-child(10n + 2) {
+      @apply col-span-3 col-start-4 row-span-8 row-start-1;
+    }
+    &:nth-child(10n + 3) {
+      @apply col-span-3 col-start-7 row-span-3 row-start-3;
+    }
+    &:nth-child(10n + 4) {
+      @apply col-span-3 col-start-7 row-span-4 row-start-6;
+    }
+  }
+
+  &-3 div {
+    &:nth-child(10n + 1) {
+      @apply col-start-1 row-span-4 row-start-2;
+    }
+    &:nth-child(10n + 2) {
+      @apply col-start-1 row-span-3 row-start-6;
+    }
+    &:nth-child(10n + 3) {
+      @apply col-start-2 row-span-9;
+    }
+    &:nth-child(10n + 4) {
+      @apply col-start-3 row-span-6 row-start-3;
+    }
+  }
 }
 
 .overlay-text {
