--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 html {
   @apply bg-gray-100;
 
@@ -11,6 +13,7 @@ body {
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply text-sm uppercase text-gray-900 bg-gray-100 tracking-wide;
 }
 
 nav {
