--- a/site/layouts/work/single.html
+++ b/site/layouts/work/single.html
@@ -89,10 +89,7 @@
     <h2 class="text-2xl lg:text-4xl normal-case mb-5 w-full">More Projects</h2>
     {{ range first 3 (shuffle (where (where .Site.RegularPages "Section" "work") "Title" "!=" .Title )) }}
       <a href="{{.Permalink}}" class="w-full lg:w-1/3 p-1 group">
-        <div class="h-56 relative overflow-hidden bg-aqua">
-          {{ if .Params.image }}
-            <img src="{{ .Params.image }}" class="object-cover w-full h-full duration-1000 ease-in-out transform group-hover:scale-105" alt="">
-          {{ end }}
+        <div class="h-56 relative overflow-hidden bg-aqua bg-cover bg-center" style="background-image: url('{{ .Params.image }}')">
           {{ if .Params.thumbnailVideo }}
             <video autoplay muted loop class="object-cover w-full h-full duration-1000 ease-in-out transform group-hover:scale-105">
               <source src="{{ .Params.thumbnailVideo }}" type="video/mp4">
