--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -364,3 +364,6 @@ body.nav-active {
   cursor: pointer;
   transform: translateY(-45%);
 }
+
+@import url(https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css);
+@import url(https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css);
