added fav and analytics and share image

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -365,5 +365,5 @@ body.nav-active {
   transform: translateY(-45%);
 }
 
-@import url(https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css);
+@import url(https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css);
 @import url(https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css);
