removed alt tags

--- a/site/layouts/work/single.html
+++ b/site/layouts/work/single.html
@@ -55,7 +55,7 @@
                   </video>
                 {{ end }}
 
-                <p class="pt-3">{{ .alt }}</p>
+                <!-- <p class="pt-3">{{ .alt }}</p> -->
               </li>
             {{ end }}
           </ul>
