added meta titles to all pages

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -2,7 +2,7 @@
 
 <div class="animate__animated animate__fadeIn test px-2">
   <div class="max-w-5xl mx-auto pt-20 pb-10">
-    <p class="max-w-none font-semibold">{{ .Title }}</p>
+    <p class="max-w-none font-semibold">{{ .Params.inPageTitle }}</p>
     <p class="max-w-none text-4xl normal-case">{{ .Params.intro }}</p>
   </div>
 
