--- a/site/layouts/work/single.html
+++ b/site/layouts/work/single.html
@@ -3,7 +3,7 @@
   <div class="border border-solid border-gray-900 dark:border-white overflow-hidden">
 
     <div class="marquee2" data-duplicated='true' data-direction='left' data-pauseOnHover='false' data-gap='200' data-speed='100' data-startVisible='true'>
-      <span class="text-7xl lg:text-9xl font-semibold">{{.Title}}</span>
+      <span class="text-7xl lg:text-9xl font-semibold">{{.Params.inPageTitle}}</span>
     </div>
 
     <div class="w-full flex flex-row font-semibold border-t border-b border-gray-900 dark:border-white">
