--- a/site/layouts/jobs/single.html
+++ b/site/layouts/jobs/single.html
@@ -4,7 +4,7 @@
   <div class="max-w-5xl mx-auto pt-20 pb-10 px-2">
 
     <div class="mb-10">
-      <h1 class="text-2xl lg:text-4xl font-semibold normal-case">{{.Title}}</h1>
+      <h1 class="text-2xl lg:text-4xl font-semibold normal-case">{{.Params.inPageTitle}}</h1>
       <ul class="font-semibold">
         <li>Category: <span class="normal-case font-normal">{{.Params.category}}</span></li>
         <li>Type: <span class="normal-case font-normal">{{.Params.jobType}}</span></li>
