fixed meta title mixups and removed preview for work

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -9,7 +9,7 @@
 
           <a href="{{ .Permalink }}" class="tile bg-aqua overflow-hidden cursor-pointer group relative bg-cover bg-center" style="background-image: url('{{ .Params.image }}')">
             <div class="overlay-text z-20 opacity-0 group-hover:opacity-100 transition-all mix-blend-difference text-center w-full p-2 leading-none">
-              {{ .Title }}
+              {{.Params.inPageTitle}}
             </div>
             {{ if .Params.thumbnailVideo }}
               <video autoplay muted loop class="object-cover w-full h-full duration-1000 ease-in-out transform group-hover:scale-105">
