--- a/site/layouts/work/single.html
+++ b/site/layouts/work/single.html
@@ -97,7 +97,7 @@
           {{ end }}
         </div>
         <h4 class="py-2">
-          {{ .Title }}
+          {{.Params.inPageTitle}}
         </h4>
       </a>
     {{ end }}
