tile text is visible by default below desktop

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -8,7 +8,7 @@
         {{ range $paginator.Pages }}
 
           <a href="{{ .Permalink }}" class="tile bg-aqua overflow-hidden cursor-pointer group relative bg-cover bg-center" style="background-image: url('{{ .Params.image }}')">
-            <div class="overlay-text z-20 opacity-0 group-hover:opacity-100 transition-all mix-blend-difference text-center w-full p-2 leading-none">
+            <div class="overlay-text z-20 lg:opacity-0 group-hover:opacity-100 transition-all mix-blend-difference text-center w-full p-2 leading-none">
               {{.Params.inPageTitle}}
             </div>
             {{ if .Params.thumbnailVideo }}
