--- a/site/layouts/work/list.html
+++ b/site/layouts/work/list.html
@@ -7,7 +7,7 @@
 
       <a href="{{.Permalink}}" class="tile w-full md:w-1/2 2xl:w-1/3 p-1 group">
         <div class="h-80 2xl:h-96 relative group bg-aqua overflow-hidden bg-cover bg-center" style="background-image: url('{{ .Params.image }}')">
-          <div class="text-white overlay-text z-20 opacity-0 w-full group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
+          <div class="text-white overlay-text z-20 w-full lg:opacity-0 lw-full group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
             {{.Params.inPageTitle}}
           </div>
           {{ if .Params.thumbnailVideo }}
