--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -36,6 +36,7 @@
   />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/infinite-scroll@4/dist/infinite-scroll.pkgd.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/jquery.marquee@1.6.0/jquery.marquee.min.js" type="text/javascript"></script>
 
   <!-- Required Core Stylesheet -->
